# cli

./: .bash_aliases  .bash_profile  .gitmodules  .zprofile  .zshrc  README.md  aliases.zsh  converter_tools.sh  functions.sh  import_slack_emojis.py  macos-setup.sh  pyproject.toml  setup.sh  ubuntusetup.sh  utils.sh
example/classes/: upload_with_class.py  upload_without_class.py
src/devtools/ci_tools/: update_readme.py
